[metadata]
name = pysubunit
summary = A python implementation of the subunit protocol
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pysubunit

[entry_points]
console_scripts =
  subunit-1to2 = pysubunit.commands.subunit_1to2:main
  subunit-2to1 = pysubunit.commands.subunit_2to1:main
  subunit-filter = pysubunit.commands.subunit_filter:main
  subunit-ls = pysubunit.commands.subunit_ls:main
  subunit-output = pysubunit.commands.subunit_output:main
  subunit-stats = pysubunit.commands.subunit_stats:main
  subunit-tags = pysubunit.commands.subunit_tags:main
  subunit2csv = pysubunit.commands.subunit2csv:main
  subunit2disk = pysubunit.commands.subunit2disk:main
  subunit2junitxml = pysubunit.commands.subunit2junitxml:main
  subunit2pyunit = pysubunit.commands.subunit2pyunit:main
  tap2subunit = pysubunit.commands.tap2subunit:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = stestr/locale
domain = stestr

[update_catalog]
domain = stestr
output_dir = stestr/locale
input_file = stestr/locale/stestr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = stestr/locale/stestr.pot
